--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,5 +13,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Coursier Cache
+      uses: coursier/cache-action@v5
     - name: test
       run: sbt test
